# kaggle_nbme

./: .gitignore  LICENSE  README.md  pyproject.toml  remove.sh  requirements.txt
EDA/: fitst_eda_220227.ipynb  patient_note_220308.ipynb
nbme_pipeline/ex001/: classify_env.py  config.py  cv.py  data_load.py  dataset.py  get_tokenizer.py  helper.py  inference.py  model.py  pred.py  run.py  run_inference.py  run_train.py  score.py  train.py
nbme_pipeline/ex002/: classify_env.py  config.py  dataset.py  exp.py  get_tokenizer.py  logger.py  run_train.py  train.py
nbme_pipeline/ex003/: get_tokenizer.py  model.py  run_mlm.py  run_train.py  set_wandb.py  train.py
nbme_pipeline/ex004/: calc_text_len.py  config.py  dataset.py  model.py  pred.py  preprocess.py  run_mlm.py  run_train.py  score.py
