[tool.poetry]
name = "kaggle_nbme"
version = "0.1.0"
description = ""
authors = ["Shinichiro Saito <s-saito@chic.ocn.ne.jp>"]

[tool.poetry.dependencies]
python = "3.7.10"
kaggle = "^1.5.12"
pandas = "1.3.5"
matplotlib = "^3.5.1"
tokenizers = "^0.12.1"
transformers = "^4.18.0"
scikit-learn = "^1.0.2"
numpy = "1.21.6"
torch = "1.10.0"
tf-estimator-nightly = "2.8.0.dev2021122109"
Markdown = "3.0"
requests = "2.23.0"
six = "1.15.0"
click = "<8.0"
folium = "0.2.1"
imgaug = "<0.2.7"
Jinja2 = "<3.0"

[tool.poetry.dev-dependencies]
wandb = "^0.12.14"
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "<=19.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
include_trailing_comma = true
multi_line_output = 3